tests/trybuild/schedule/type_comma_alone.rs
use brood::system::Schedule;

type MySchedule = Schedule!(,);

fn main() {}
